Front: Fix media-align-center (needs 'display: block;')

--- a/web/themes/custom/breema2/css/email.css
+++ b/web/themes/custom/breema2/css/email.css
@@ -1232,6 +1232,7 @@ ol.location-results .field--name-field-upcoming-events > .field__item {
 
 .media-align-center img {
   margin: 0 auto;
+  display: block;
 }
 .media-align-center .field--name-field-main-image {
   float: none;
