--- a/web/themes/custom/breema2/css/styles.css
+++ b/web/themes/custom/breema2/css/styles.css
@@ -1410,6 +1410,7 @@ ul.menu a.is-active {
 
 .media-align-center img {
   margin: 0 auto;
+  display: block;
 }
 .media-align-center .field--name-field-main-image {
   float: none;
