--- a/web/themes/custom/breema2/sass/components/_paragraph.scss
+++ b/web/themes/custom/breema2/sass/components/_paragraph.scss
@@ -21,6 +21,7 @@
 .media-align-center {
   img {
     margin: 0 auto;
+    display: block;
   }
   // For product paragraphs, we need to undo the 'float: left' on main image.
   .field--name-field-main-image {
